Se agrega nueva tabla tipo_dependencia_descuento
